cmake_minimum_required(VERSION 3.29)
project(Final_Assignment_Code)

set(CMAKE_CXX_STANDARD 20)

add_executable(Final_Assignment_Code main.cpp
        Customer.h
        Customer.cpp
        Menu.h
        Menu.cpp
        Order.h
        Order.cpp
        Item.h
        Item.cpp
        Food.h
        Food.cpp
        Drink.h
        Drink.cpp
        Dessert.h
        Dessert.cpp
        LinkedList.h
        LinkedList.cpp
)
